# xirtam-core

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: gh-pages.yml
binaries/nullpoint-directory/: Cargo.toml
binaries/nullpoint-directory/src/: config.rs  db.rs  main.rs  mirror.rs  pow.rs  server.rs  state.rs
binaries/nullpoint-egui/: Cargo.toml
binaries/nullpoint-egui/src/: events.rs  main.rs  promises.rs
binaries/nullpoint-egui/src/screens/: login.rs  mod.rs  steady_state.rs
binaries/nullpoint-egui/src/utils/: color.rs
binaries/nullpoint-egui/src/widgets/: add_contact.rs  add_device.rs  add_group.rs  convo.rs  group_roster.rs  preferences.rs
binaries/nullpoint-multitool/: Cargo.toml
binaries/nullpoint-multitool/src/: main.rs  shared.rs
binaries/nullpoint-multitool/src/commands/: device.rs  dir.rs  keygen.rs
binaries/nullpoint-server/: Cargo.toml
binaries/nullpoint-server/migrations/: 0001_init.sql  0002_device_tokens.sql
binaries/nullpoint-server/src/: config.rs  device.rs  dir_client.rs  mailbox.rs  main.rs  rpc.rs
binaries/nullpoint-server/src/mailbox/: pubsub.rs
binaries/nullspace-directory/: Cargo.toml
binaries/nullspace-directory/migrations/: 0001_init.sql
binaries/nullspace-directory/src/: config.rs  (+7 more)
binaries/nullspace-egui/: Cargo.toml
binaries/nullspace-egui/src/: events.rs  fonts.rs  main.rs  notify.rs  promises.rs  rpc.rs
binaries/nullspace-egui/src/screens/: add_contact.rs  login.rs  preferences.rs  steady_state.rs
binaries/nullspace-egui/src/utils/: color.rs  image.rs  markdown.rs  mod.rs  prefs.rs  profile_loader.rs  size.rs  speed.rs  units.rs
binaries/nullspace-egui/src/widgets/: add_contact.rs  add_device.rs  add_group.rs  avatar.rs  content.rs  convo.rs  convo_row.rs  group_roster.rs  mod.rs  preferences.rs  profile.rs  smooth.rs  user_info.rs
binaries/nullspace-egui/src/widgets/convo/: cluster.rs  convo_state.rs
binaries/nullspace-multitool/: Cargo.toml
binaries/nullspace-multitool/src/: main.rs  shared.rs
binaries/nullspace-multitool/src/commands/: device.rs  dir.rs  keygen.rs  mod.rs
binaries/nullspace-server/: Cargo.toml
binaries/xirtam-directory/: Cargo.toml
binaries/xirtam-egui/: Cargo.toml  xirtam-client.db  xirtam-client.db-shm  xirtam-client.db-wal
binaries/xirtam-egui/src/: app.rs  events.rs  main.rs
binaries/xirtam-egui/src/screens/: steady_state.rs
binaries/xirtam-egui/src/utils/: markdown.rs
binaries/xirtam-egui/src/widgets/: add_contact.rs  add_group.rs  convo.rs  mod.rs
binaries/xirtam-gateway/: Cargo.toml
binaries/xirtam-gateway/migrations/: 0001_init.sql  0004_device_temp_pks.sql
binaries/xirtam-gateway/src/: config.rs  database.rs  device.rs  dir_client.rs  mailbox.rs  main.rs  rpc.rs
binaries/xirtam-multitool/: Cargo.toml
binaries/xirtam-multitool/src/: main.rs
binaries/xirtam-multitool/src/commands/: device.rs
demo/: .gitignore  gateway.toml  mailbox-recv  mailbox-send  register-demo-handle-device  register-demo-username-device  run-directory  run-gateway  run-server
demo/state/: directory-secret.key  gateway-signing.key
docs/: README.md  SUMMARY.md  _sidebar.md  book.toml  devices.md  e2ee.md  events.md  groups.md  network.md
docs/guides/: README.md  gui-quick-start.md
docs/protocol/: README.md  attachments.md  devices.md  e2ee.md  events.md  groups.md  network.md
docs/src/: README.md  SUMMARY.md  e2ee.md  network.md
libraries/nanorpc-reqwest/: Cargo.toml
libraries/nullpoint-client/: Cargo.toml  README.md
libraries/nullpoint-crypt/: Cargo.toml  README.md  build.rs
libraries/nullpoint-dirclient/: Cargo.toml  README.md  build.rs
libraries/nullpoint-nanorpc/: Cargo.toml
libraries/nullpoint-structs/: Cargo.toml
libraries/nullpoint-structs/benches/: header_encryption.rs
libraries/nullpoint-structs/src/: certificate.rs  directory.rs  e2ee.rs  group.rs  lib.rs  server.rs  timestamp.rs  username.rs
libraries/nullspace-client/: Cargo.toml  README.md
libraries/nullspace-client/migrations/: 0002_attachments.sql  0004_user_cache.sql
libraries/nullspace-client/src/: attachments.rs  c_api.rs  config.rs  convo.rs  database.rs  directory.rs  events.rs  identity.rs  internal.rs  lib.rs  long_poll.rs  main_loop.rs  medium_keys.rs  profile.rs  rpc_pool.rs  server.rs  upload.rs  user_info.rs
libraries/nullspace-client/src/convo/: dm_common.rs  dm_recv.rs  group.rs  group_recv.rs  rekey.rs  roster.rs  send.rs
libraries/nullspace-crypt/: Cargo.toml  README.md  build.rs
libraries/nullspace-crypt/src/: aead.rs  hash.rs  lib.rs  signing.rs
libraries/nullspace-dirclient/: Cargo.toml  README.md  build.rs
libraries/nullspace-dirclient/src/: header_sync.rs  lib.rs  pow.rs
libraries/nullspace-nanorpc/: Cargo.toml
libraries/nullspace-nanorpc/src/: lib.rs
libraries/nullspace-rpc-pool/: Cargo.toml
libraries/nullspace-rpc-pool/src/: lib.rs
libraries/nullspace-structs/: Cargo.toml
libraries/xirtam-client/: Cargo.toml  README.md
libraries/xirtam-client/migrations/: 0001_init.sql
libraries/xirtam-client/src/: c_api.rs  config.rs  convo.rs  database.rs  directory.rs  dm.rs  gateway.rs  identity.rs  internal.rs  lib.rs  long_poll.rs  main_loop.rs  medium_keys.rs  peer.rs  rpc.rs  user_info.rs
libraries/xirtam-client/src/convo/: dm_common.rs  dm_recv.rs  group.rs  group_recv.rs  rekey.rs  roster.rs  send.rs
libraries/xirtam-crypt/: Cargo.toml  README.md  build.rs
libraries/xirtam-crypt/src/: aead.rs  dh.rs  encoding.rs  hash.rs  lib.rs  signing.rs
libraries/xirtam-dirclient/: Cargo.toml  README.md  build.rs  file.db
libraries/xirtam-dirclient/examples/: xirtam-dirclient-cli.rs
libraries/xirtam-dirclient/migrations/: 0001_init.sql
libraries/xirtam-dirclient/src/: header_sync.rs  lib.rs  pow.rs
libraries/xirtam-nanorpc/: Cargo.toml
libraries/xirtam-nanorpc/src/: lib.rs  tcp.rs
libraries/xirtam-structs/: Cargo.toml
libraries/xirtam-structs/benches/: envelope.rs
libraries/xirtam-structs/src/: certificate.rs  directory.rs  e2ee.rs  envelope.rs  gateway.rs  group.rs  handle.rs  lib.rs  msg_content.rs  server.rs  timestamp.rs
(+65 files in other folders)
