[workspace]

members = ["libraries/*", "binaries/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
repository = "https://github.com/mel-project/nullpoint-core"
license = "LGPL-3.0"
edition = "2024"


[patch.crates-io]
#novasmt = { path = "../novasmt" }


[profile.release]
panic = "abort"
debug = 0
overflow-checks = true
lto = "thin"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.dev.package.num-bigint-dig]
opt-level = 3


[profile.release-dbg]
inherits = "dev"
opt-level = 3
