[package]
name = "nullpoint-egui"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
eframe = { version = "0.33.3", features = ["wgpu"] }
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
] }
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
url = "2.5.8"
nullpoint-client = { version = "0.0.1", path = "../../libraries/nullpoint-client" }
nullpoint-crypt = { version = "0.0.1", path = "../../libraries/nullpoint-crypt" }
nullpoint-structs = { version = "0.0.1", path = "../../libraries/nullpoint-structs" }
egui_hooks = { version = "0.10.0", features = ["persistence"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }
smol_str = "0.3.2"
notify-rust = "4.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
egui = "0.33.3"
anyhow = "1.0.100"
egui_infinite_scroll = { version = "0.9.0", features = ["async", "tokio"] }
egui_flex = "0.5.0"
pollster = "0.4.0"
pulldown-cmark = "0.11.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rodio = { version = "0.21.0", default-features = false, features = ["mp3", "playback"] }
