[package]
name = "nullspace-egui"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
catppuccin-egui = { version = "5.7.0", default-features = false, features = [
    "egui33",
] }
eframe = { version = "0.33.3", features = ["persistence", "wgpu"] }
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
] }
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
url = "2.5.8"
nullspace-client = { version = "0.0.1", path = "../../libraries/nullspace-client" }
nullspace-crypt = { version = "0.0.1", path = "../../libraries/nullspace-crypt" }
nullspace-structs = { version = "0.0.1", path = "../../libraries/nullspace-structs" }
egui_hooks = { version = "0.10.0", features = ["persistence"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }
smol_str = "0.3.2"
notify-rust = { version = "4.11.0", features = ["d"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
anyhow = "1.0.100"
egui_infinite_scroll = { version = "0.9.0", features = ["async", "tokio"] }
egui_flex = "0.5.0"
egui_taffy = "0.10"
taffy = "0.7.7"
pollster = "0.4.0"
pulldown-cmark = "0.11.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rodio = { version = "0.21.0", default-features = false, features = [
    "mp3",
    "playback",
] }
egui-file-dialog = "0.12.0"
open = "5.3.2"
infer = "0.19.0"
dashmap = "6.1.0"
defmac = "0.2.1"
image = "0.25.9"
fast_image_resize = "6.0.0"
font-kit = "0.14.3"
moka = { version = "0.12.12", features = ["sync"] }
arboard = { version = "3.6.1", features = ["image-data", "wayland-data-control"] }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3.3", default-features = false, features = [
    "async-io",
    "blocking",
] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.21.1"
