[package]
name = "nullspace-multitool"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
bcs = "0.1.6"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
url = "2.5.7"
nullspace-crypt = { path = "../../libraries/nullspace-crypt" }
nullspace-dirclient = { path = "../../libraries/nullspace-dirclient" }
nullspace-rpc-pool = { path = "../../libraries/nullspace-rpc-pool" }
nullspace-structs = { path = "../../libraries/nullspace-structs" }
