[package]
name = "xirtam-egui"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-channel = "2.5.0"
base64 = "0.22.1"
bytes = "1.11.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_flex = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
smol_str = { version = "0.3.4", features = ["serde"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
xirtam-client = { version = "0.0.1", path = "../../libraries/xirtam-client" }
xirtam-crypt = { version = "0.0.1", path = "../../libraries/xirtam-crypt" }
xirtam-structs = { version = "0.0.1", path = "../../libraries/xirtam-structs" }
