[package]
name = "xirtam-gateway"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
axum = "0.8.8"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
nanorpc = "0.1"
pollster = "0.4.0"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
xirtam-crypt = { path = "../../libraries/xirtam-crypt" }
xirtam-dirclient = { path = "../../libraries/xirtam-dirclient" }
xirtam-nanorpc = { path = "../../libraries/xirtam-nanorpc" }
xirtam-structs = { path = "../../libraries/xirtam-structs" }
url = "2.5.7"
