[package]
name = "xirtam-multitool"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
xirtam-crypt = { path = "../../libraries/xirtam-crypt" }
