[package]
name = "nullpoint-structs"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bcs = "0.1.6"
bytes = { version = "1.11.0", features = ["serde"] }
derivative = "2.2.0"
nanorpc = "0.1"
paste = "1"
rand = "0.9.2"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_with = { version = "3.16.1", features = ["base64", "hex"] }
smol_str = { version = "0.3.4", features = ["serde"] }
thiserror = "2.0.17"
url = { version = "2.5.8", features = ["serde"] }
nullpoint-crypt = { version = "0.0.1", path = "../nullpoint-crypt" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "header_encryption"
harness = false
