[package]
name = "nullspace-client"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyctx = "0.1.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
async-channel = "2.5.0"
bcs = "0.1.6"
bytes = "1.11.0"
dashmap = "6"
futures-concurrency = "7.6.3"
futures-util = "0.3.31"
moka = { version = "0.12.12", features = ["future"] }
nanorpc = "0.1.13"
pollster = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["base64"] }
smol_str = { version = "0.3.4", features = ["serde"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.9.5"
tracing = "0.1.41"
url = { version = "2.5.8", features = ["serde"] }
nullspace-crypt = { version = "0.0.1", path = "../nullspace-crypt" }
nullspace-dirclient = { version = "0.0.1", path = "../nullspace-dirclient" }
nullspace-rpc-pool = { version = "0.0.1", path = "../nullspace-rpc-pool" }
nullspace-structs = { version = "0.0.1", path = "../nullspace-structs" }
scopeguard = "1.2.0"
memmap2 = "0.9.9"
