[package]
name = "nullspace-crypt"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1.8.2"
bcs = "0.1.6"
base64 = "0.22.1"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
derivative = "2.2.0"
ed25519-consensus = "2.1.0"
hex = "0.4.3"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["base64", "hex"] }
subtle = "2.6.1"
thiserror = "2.0.17"
x25519-dalek = { version = "2.0.1", features = ["serde", "static_secrets"] }

[build-dependencies]
readme-rustdocifier = "0.1.1"

[dev-dependencies]
serde_json = "1.0.145"
