[package]
name = "nullspace-dirclient"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
bcs = "0.1.6"
bytes = "1.11.0"
equix = "0.5"
moka = { version = "0.12.12", features = ["future"] }
nanorpc = "0.1"
novasmt = "0.3.0-alpha.3"
rand = "0.9"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.48.0", features = ["time"] }
tracing = "0.1.44"
nullspace-crypt = { path = "../nullspace-crypt" }
nullspace-structs = { path = "../nullspace-structs" }

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
nullspace-nanorpc = { path = "../nullspace-nanorpc" }
url = "2.5.7"

[build-dependencies]
readme-rustdocifier = "0.1.1"
