[package]
name = "nullspace-nanorpc"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
async-compression = { version = "0.4.30", features = ["lz4", "tokio"] }
async-trait = "0.1"
futures-concurrency = "7.6.3"
nanorpc = "0.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
scopeguard = "1.2.0"
serde_json = "1.0.148"
tokio = { version = "1.47.1", features = ["io-util", "net", "sync"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.44"
url = "2.5.7"
