[package]
name = "xirtam-client"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyctx = "0.1.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
dashmap = "5.5.3"
nanorpc = "0.1.13"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.5"
