[package]
name = "xirtam-client"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyctx = "0.1.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
bcs = "0.1.6"
bytes = "1.11.0"
dashmap = "5.5.3"
futures-concurrency = "7.6.3"
moka = { version = "0.12.12", features = ["future"] }
nanorpc = "0.1.13"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol_str = { version = "0.3.4", features = ["serde"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.5"
tracing = "0.1.41"
url = { version = "2.5.8", features = ["serde"] }
xirtam-crypt = { version = "0.0.1", path = "../xirtam-crypt" }
xirtam-dirclient = { version = "0.0.1", path = "../xirtam-dirclient" }
xirtam-nanorpc = { version = "0.0.1", path = "../xirtam-nanorpc" }
xirtam-structs = { version = "0.0.1", path = "../xirtam-structs" }
