[package]
name = "xirtam-nanorpc"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
nanorpc = "0.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5.7"
