[package]
name = "xirtam-structs"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bcs = "0.1.6"
bytes = { version = "1.11.0", features = ["serde"] }
derivative = "2.2.0"
nanorpc = "0.1"
paste = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
smol_str = { version = "0.3.4", features = ["serde"] }
thiserror = "2.0.17"
xirtam-crypt = { version = "0.0.1", path = "../xirtam-crypt" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "envelope"
harness = false
